--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2006-11-11	tsch
+
+	* t/CairoSurface.t: Skip content tests on old cairo's.
+
 2006-11-09	tsch
 
 	* Cairo.pm, NEWS, README: Stable release 1.02.
