Brown paper bag release 1.021.
	* Cairo.pm, NEWS, README: Brown paper bag release 1.021.

svn path=/branches/stable-1-0/; revision=68

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,9 @@
 2006-11-11	tsch
 
+	* Cairo.pm, NEWS, README: Brown paper bag release 1.021.
+
+2006-11-11	tsch
+
 	* t/CairoSurface.t: Skip content tests on old cairo's.
 
 2006-11-09	tsch
