--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2006-12-30	tsch
+
+	Merge from HEAD:
+
+	* MakeHelper.pm: Fix the valid-value lists in enum error messages.
+
 2006-11-23	tsch
 
 	Merge from HEAD:
