--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,9 @@
 2006-12-30	tsch
 
+	* Cairo.pm, NEWS, README: Stable release 1.022.
+
+2006-12-30	tsch
+
 	Merge from HEAD:
 
 	* MakeHelper.pm: Fix the valid-value lists in enum error messages.
