--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2007-01-05	tsch
+
+	Merge from HEAD:
+
+	* t/CairoSurface.t: Fix an endianness problem.
+
 2006-12-30	tsch
 
 	* Cairo.pm, NEWS, README: Stable release 1.022.
