Cairo.pm Stable release 1.044.
	* Cairo.pm
	* NEWS: Stable release 1.044.

svn path=/branches/stable-1-04/; revision=125

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,10 @@
 2007-11-20  Torsten Schoenfeld  <kaffeetisch@gmx.de>
 
+	* Cairo.pm
+	* NEWS: Stable release 1.044.
+
+2007-11-20  Torsten Schoenfeld  <kaffeetisch@gmx.de>
+
 	Merge from HEAD:
 
 	* Cairo.pm: Add entries for the various surfaces to the API
