Cairo.pm Stable release 1.045.
	* Cairo.pm
	* NEWS: Stable release 1.045.

svn path=/branches/stable-1-04/; revision=140

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2008-01-07  Torsten Schoenfeld  <kaffeetisch@gmx.de>
+
+	* Cairo.pm
+	* NEWS: Stable release 1.045.
+
 2007-12-29  Torsten Schoenfeld  <kaffeetisch@gmx.de>
 
 	Merge from HEAD:
