--- a/ChangeLog
+++ b/ChangeLog
@@ -5,6 +5,10 @@
 	* Cairo.pm: Fix POD for Cairo::SvgSurface::get_versions and
 	version_to_string.
 
+	* CairoPath.xs: Fix the tied interface for paths on perl 5.6,
+	whose magic support was slightly broken.  Also cleanup the tie
+	code a bit.
+
 2008-01-07  Torsten Schoenfeld  <kaffeetisch@gmx.de>
 
 	* Cairo.pm
